// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mount ops 2 should create deterministic structures 1`] = `
<article>
  <div />
  Baz
  Foobar
  <div />
</article>
`;

exports[`Observe node shoudl work 1`] = `
<article>
  <div>
    baz
    test
    foobar
  </div>
</article>
`;

exports[`Observe node should handle case 4 1`] = `<article />`;

exports[`Observe node should handle fragments properly 1`] = `
<article>
  <div>
    <h2>
      Header
    </h2>
    <div>
      test
      foo
    </div>
    <div>
      test
      foo
    </div>
    <div>
      after
    </div>
  </div>
</article>
`;

exports[`Observe node should place later nodes in right order 1`] = `
<article>
  <div>
    <div>
      first
      second
      third
    </div>
    <div>
      first
      second
      third
    </div>
    <div>
      first
      second
      third
    </div>
  </div>
</article>
`;
